--- a/composer.json
+++ b/composer.json
@@ -65,6 +65,7 @@
         }
     },
     "config": {
+        "vendor-dir": "./vendor",
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true,
