--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-APP_NAME=Laravel
+APP_NAME="Русская ассоциация чтения"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:DdQ21+aQZeW/nVokKv7MrFNkKAXhtbHsrb7WJjCKCc4=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:12000
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
+APP_LOCALE=ru
+APP_FALLBACK_LOCALE=ru
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mariadb
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=rach_website
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=sqlite
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=laravel
+# DB_USERNAME=root
+# DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
